--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </h5>
                     <h5>But various people from the community has organised a community take over and took it upon themselves to see the project rise to the top.
                     </h5>
-                    <h5>As we have seen in  the past alot of community take over project rise from the dust into millions in mc, $Davido is set to even more.
+                    <h5>As we have seen in  the past alot of community take over project rise from the dust into millions in marketcap, $Davido is set to do even more.
                     </h5>
                     <h3 class="join-us">Join us on our mission to the <br> moon!!! 🚀🚀🚀</h3>
                     
@@ -140,14 +140,14 @@
             <h3 class="mt-5">$Davido Contract Address</h3>
             <h5 class="addy my-4">9LAjk5F4rFetELE4CygcBbZ5hYc2QhRrbJjfm5Q26jWM</h5>
 
-            <a href=""><button class="btn bg-dark text-light">VIEW CHART</button></a>
+            <a href="https://dexscreener.com/solana/48XCxXxuVjEefX8K1qAMD2yELYUkXihYQegtSKXf4JXG"><button class="btn bg-dark text-light">VIEW CHART</button></a>
         </div>
 
         <div class="footer">
             <h2 class="fw-bold mb-4">Welcome To The Groove!</h2>
-            <a href=""><button class="btn bg-light social">Twitter</button></a>
-            <a href="https://t.me/+A6M2xa2I0bszOWM0"><button class="btn bg-light social">Telegram</button></a>
-            <a href=""><button class="btn bg-light social">Dexscreener</button></a>
+            <a href="https://x.com/davidotokensol?t=uYeLXHvO6UjAlu3xyaC1Eg&s=09"><button class="btn bg-light social">TWITTER</button></a>
+            <a href="https://t.me/+A6M2xa2I0bszOWM0"><button class="btn bg-light social">TELEGRAM</button></a>
+            <a href="https://dexscreener.com/solana/48XCxXxuVjEefX8K1qAMD2yELYUkXihYQegtSKXf4JXG"><button class="btn bg-light social">DEXSCREENER</button></a>
         </div>
 
         <footer class="bg-dark text-center">
