--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
             
         </div>
         <div class="support">
-            <a href=""><span onclick="support()">❤️</span></a>
+            <button onclick="support()" class="support">❤️</button>
+            <div class="donating">
+                              
+                <h3 id="?"></h3>
+                <h5 id="donate"></h5>
+            </div>
         </div>
         <div class="bod">
             <div class="about d-flex">
