--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <button onclick="support()" class="support">❤️</button>
             <div class="donating">
                               
-                <h3 id="?"></h3>
+                <h3 id="?""></h3>
                 <h5 id="donate"></h5>
             </div>
         </div>
@@ -134,6 +134,7 @@
 
     </div>
     
+    <script src="test.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
