--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
         <div class="bod">
             <div class="about d-flex">
-                <div class="body bg-dark py-5 mt-5" id="about">
+                <div class="body bg-dark py-5 mt-5" id="about"><br><br>
                     <h1>$DAVIDO COMMUNITY TAKEOVER</h1>
                     <h5> 
 
@@ -101,7 +101,7 @@
             <div class="tokenomics text-center my-5" id="tokenomics">
                 <h1>Tokenomics</h1>
                 <h4>Token Supply: 1,000,000,000</h4>
-                <h4>No Tax, No Bullshits, It's that simple</h4>
+                <h4>No tax, No dev, No bullshits, It's that simple</h4>
             </div>
         </div>
 
@@ -123,6 +123,7 @@
         <div class="footer" id="social">
             <h2 class="fw-bold mb-4">Welcome To The Groove!</h2>
             <a href="https://x.com/davidotokensol?t=uYeLXHvO6UjAlu3xyaC1Eg&s=09"><button class="btn bg-light social">Twitter</button></a>
+            <a href="https://www.instagram.com/davido/?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw%3D%3D"><button class="btn bg-light social">Instagram</button></a>
             <a href="https://t.me/+A6M2xa2I0bszOWM0"><button class="btn bg-light social">Telegram</button></a>
             <a href="https://dexscreener.com/solana/48XCxXxuVjEefX8K1qAMD2yELYUkXihYQegtSKXf4JXG"><button class="btn bg-light social">Dexscreener</button></a>
         </div>
